# inova-ru

./: .gitignore  LICENSE  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: pr-main.yml
app/: +not-found.tsx  _layout.tsx  about.tsx  index.tsx
app/auth/: _layout.tsx  login.tsx
app/main/: _layout.tsx  settings.tsx
app/main/meal-history/: index.tsx
app/main/meals/: history.tsx  menu.tsx
app/main/menu/: index.tsx
app/main/recharge/: history.tsx  index.tsx  payment.tsx
app/main/recharge-history/: index.tsx
app/main/settings/: index.tsx
app/settings/: index.tsx
backend/: .gitignore  Dockerfile  examples.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: auth.py  credits.py  demo.py
backend/app/core/: clock.py  config.py  errors.py  rate_limit.py  security.py
backend/app/domain/: models.py
backend/app/repositories/: memory.py
backend/app/schemas/: auth.py  credits.py  demo.py
backend/inovaru_demo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_demo_api.py
docs/: current-manual-flow.md
docs/contract-fixtures/auth/: login-invalid-401.json  login-success.json
docs/contract-fixtures/credits/: balance-active.json  balance-blocked.json  balance-inactive-404.json
docs/contract-fixtures/errors/: 400.json  401.json  403.json  404.json  422.json  429.json  500.json
docs/contract-fixtures/histories/: meals-page-1.json  recharges-page-1.json
mock/: README.md  api.json
src/_app/: index.ts
src/_app/views/: App.tsx  (+5 more)
(+254 files in other folders)
