[project]
name = "inovaru-demo-api"
version = "0.1.0"
description = "Stateful FastAPI demo API for the InovaRU mobile contract."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "PyJWT>=2.8",
  "pytest>=8",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
